Archive2/e5/8e870905b977e4/output
main.cpp:3:1: error: unknown type name 'String'; did you mean 'std::string'?
String cmd = "command";
^~~~~~
std::string
/usr/include/c++/v1/iosfwd:189:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
1 error generated.
