Archive2/e5/8e870905b977e4/main.cpp
#include <string>

String cmd = "command";